# KnowField

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: field-report-schema.md
examples/fields/: edge_computing.json
knowfield/: __init__.py  cli.py  collector.py  field_config.py  known_fields.py  report.py  schema.py
paper_search/: build_final_report.py  paper_search_crawler.py
paper_search/crawlers/: __init__.py  arxiv.py  s2.py
paper_search/orchestration/: __init__.py  sync_and_build.py
paper_search/pdf_ops/: __init__.py  add_thesis_review.py  dedup.py  fix_prefix.py  move_nonrelevant_back.py  reattempt_archive.py  reattempt_nonrelevant.py  rename.py  rename_low_relevance.py  scan_low_relevance.py  similarity.py
paper_search/reporting/: __init__.py  build_final.py  enrichment.py  missing.py  unified.py
paper_search/utils/: multipaper.py  paths.py  reconcile.py
